fixed minor spacing in landing container class

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ section {
 @media only screen and (min-width: 35em){
     .landing__container {
         max-width: 50em;
-        padding: 4em;
+        padding: 1em 4em 4em;
     }
 }
 
